--- a/music.html
+++ b/music.html
@@ -149,8 +149,15 @@
                 <i class="bi shuffle bi-skip-start-fill" id="back">Next</i>
                 <i class="bi bi-play-fill" id="masterPlay"></i>
                 <i class="bi bi-skip-end-fill" id="next"></i>
+                
+                <i class="bi bi-cloud-arrow-down-fill" id="download_music"></i>
 
-
+            </div>
+            <span id="currentStart">0:00</span>
+            <div class="bar">
+                <input type="range" id="seek" min="0" max="100">
+                <div class="bar2" id="bar2"></div>
+                <div class="dot"></div>
             </div>
         </div>
     </header>
