--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h2 class="logo">Pluton Records</h2>
           <div class="toggle"></div>
         </header>
-        <video src="JO-CLIP.mp4" muted loop autoplay ></video>
+        <video src="media/JO-CLIP.mp4" muted loop autoplay ></video>
 
 
         <div class="overlay"></div>
