--- a/music.html
+++ b/music.html
@@ -149,6 +149,23 @@
                 <div class="user">
                     <img src="image/pluton-logo.jpeg" alt="pluton-logo">
                 </div>
+<!--  MENU BURGER          -->
+
+<!--
+                <div class="toggle"></div>
+
+                <div class="menuBurger">
+                    <ul>
+                      <li><a href="#">Accueil</a></li>
+                      <li><a href="#">Playlist Pluton</a></li>
+                      <li><a href="#">Nos artistes</a></li>
+                      <li><a href="#">Blog</a></li>
+                      <li><a href="#">Contact</a></li>
+                    </ul>
+                  </div> 
+                -->
+<!-- FIN MENU BURGER-->
+
             </nav>
             <div class="content">
                 <h1>Rose</h1>
